# ka_subicon

./: CMakeLists.txt  README.md  conanfile.py
src/subicon/: CMakeLists.txt  README.md
src/subicon/include/ka/subicon/: subicon.hpp  svg.hpp
src/subicon/src/: subicon.cpp  svg.cpp
src/subicon/test/: load_xml.cpp  load_xml.hpp  test.cpp  test_svg_intrinsic_size.cpp
test_package/: CMakeLists.txt  conanfile.py  main.cpp
